@@ -46,9 +46,9 @@ Please see first:
   - ClusterShell.Task
 """
 
-__version__ = '1.3.1'
+__version__ = '1.4'
 __version_info__ = tuple([ int(_n) for _n in __version__.split('.')])
-__date__    = '2010/09/03'
+__date__    = '2010/09/28'
 __author__  = 'Stephane Thiell <stephane.thiell@cea.fr>'
 __url__     = 'http://clustershell.sourceforge.net/'
 
