@@ -1,3 +1,8 @@
+2010-09-28 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/OptionParser.py: Do not allow option value starting with '-' in some
+	cases.
+
 2010-09-26 S. Thiell <stephane.thiell@cea.fr>
 
 	* CLI: Package created.
